# Ants_Simulation

./: CMakeLists.txt  main.cpp
map/: Map.cpp  Map.h  Point.cpp  Point.h
objects/: Ant.cpp  Ant.h
visualization/: Color.cpp  Color.h  Visualizer.cpp  Visualizer.h
